bindings/d/source/ckzg/c.d

/*
 * Facade header for dstep binding generation.
 * Exposes only the public API of c-kzg-4844, treating KZGSettings as opaque.
 *
 * KZGSettings actual layout (settings.h):
 *   10 fields x 8 bytes = 80 bytes on x86_64
 *
 * Generated by dstep from bindings/d/ckzg_public.h:
 *   dstep bindings/d/ckzg_public.h -o bindings/d/source/ckzg/c.d \
 *     --global-attribute="@nogc" --global-attribute="nothrow" --package="ckzg"
 * (module name manually changed from ckzg.ckzg_public to ckzg.c)
 */

module ckzg.c;

import core.stdc.stdio;

extern (C):
@nogc:
nothrow:

////////////////////////////////////////////////////////////////////////////////////////////////////
// Constants
////////////////////////////////////////////////////////////////////////////////////////////////////

/** The number of bytes in a KZG commitment. */
enum BYTES_PER_COMMITMENT = 48;

/** The number of bytes in a KZG proof. */
enum BYTES_PER_PROOF = 48;

/** The number of bytes in a BLS scalar field element. */
enum BYTES_PER_FIELD_ELEMENT = 32;

/** The number of field elements in a blob. */
enum FIELD_ELEMENTS_PER_BLOB = 4096;

/** The number of bytes in a blob. */
enum BYTES_PER_BLOB = FIELD_ELEMENTS_PER_BLOB * BYTES_PER_FIELD_ELEMENT;

/** The number of field elements in a cell. */
enum FIELD_ELEMENTS_PER_CELL = 64;

/** The number of bytes in a single cell. */
enum BYTES_PER_CELL = FIELD_ELEMENTS_PER_CELL * BYTES_PER_FIELD_ELEMENT;

/** The number of cells in a blob. */
enum CELLS_PER_BLOB = FIELD_ELEMENTS_PER_BLOB / FIELD_ELEMENTS_PER_CELL;

/** The number of cells in an extended blob. */
enum CELLS_PER_EXT_BLOB = 128;

////////////////////////////////////////////////////////////////////////////////////////////////////
// Types
////////////////////////////////////////////////////////////////////////////////////////////////////

/** The common return type for all routines in which something can go wrong. */
enum C_KZG_RET
{
    C_KZG_OK = 0, /**< Success! */
    C_KZG_BADARGS = 1, /**< The supplied data is invalid in some way. */
    C_KZG_ERROR = 2, /**< Internal error - this should never occur. */
    C_KZG_MALLOC = 3 /**< Could not allocate memory. */
}

alias C_KZG_OK = C_KZG_RET.C_KZG_OK;
alias C_KZG_BADARGS = C_KZG_RET.C_KZG_BADARGS;
alias C_KZG_ERROR = C_KZG_RET.C_KZG_ERROR;
alias C_KZG_MALLOC = C_KZG_RET.C_KZG_MALLOC;

/** An array of 32 bytes. Represents an untrusted (potentially invalid) field element. */
struct Bytes32
{
    ubyte[32] bytes;
}

/** An array of 48 bytes. Represents an untrusted (potentially invalid) commitment/proof. */
struct Bytes48
{
    ubyte[48] bytes;
}

/** A basic blob data. */
struct Blob
{
    ubyte[131072] bytes;
}

/** A single cell for a blob. */
struct Cell
{
    ubyte[2048] bytes;
}

/** A trusted (valid) KZG commitment. */
alias KZGCommitment = Bytes48;

/** A trusted (valid) KZG proof. */
alias KZGProof = Bytes48;

/**
 * Stores the setup and parameters needed for computing KZG proofs.
 * Treated as opaque: internal fields depend on blst internals.
 * Size: 10 fields x 8 bytes = 80 bytes on x86_64.
 */
struct KZGSettings
{
    ulong[10] _opaque;
}

////////////////////////////////////////////////////////////////////////////////////////////////////
// Public Functions
////////////////////////////////////////////////////////////////////////////////////////////////////

/* Setup */
C_KZG_RET load_trusted_setup (
    KZGSettings* out_,
    const(ubyte)* g1_monomial_bytes,
    ulong num_g1_monomial_bytes,
    const(ubyte)* g1_lagrange_bytes,
    ulong num_g1_lagrange_bytes,
    const(ubyte)* g2_monomial_bytes,
    ulong num_g2_monomial_bytes,
    ulong precompute);

C_KZG_RET load_trusted_setup_file (KZGSettings* out_, FILE* in_, ulong precompute);

void free_trusted_setup (KZGSettings* s);

/* EIP-4844 */
C_KZG_RET blob_to_kzg_commitment (KZGCommitment* out_, const(Blob)* blob, const(KZGSettings)* s);

C_KZG_RET compute_kzg_proof (
    KZGProof* proof_out,
    Bytes32* y_out,
    const(Blob)* blob,
    const(Bytes32)* z_bytes,
    const(KZGSettings)* s);

C_KZG_RET compute_blob_kzg_proof (
    KZGProof* out_,
    const(Blob)* blob,
    const(Bytes48)* commitment_bytes,
    const(KZGSettings)* s);

C_KZG_RET verify_kzg_proof (
    bool* ok,
    const(Bytes48)* commitment_bytes,
    const(Bytes32)* z_bytes,
    const(Bytes32)* y_bytes,
    const(Bytes48)* proof_bytes,
    const(KZGSettings)* s);

C_KZG_RET verify_blob_kzg_proof (
    bool* ok,
    const(Blob)* blob,
    const(Bytes48)* commitment_bytes,
    const(Bytes48)* proof_bytes,
    const(KZGSettings)* s);

C_KZG_RET verify_blob_kzg_proof_batch (
    bool* ok,
    const(Blob)* blobs,
    const(Bytes48)* commitments_bytes,
    const(Bytes48)* proofs_bytes,
    ulong n,
    const(KZGSettings)* s);

/* EIP-7594 */
C_KZG_RET compute_cells_and_kzg_proofs (
    Cell* cells,
    KZGProof* proofs,
    const(Blob)* blob,
    const(KZGSettings)* s);

C_KZG_RET recover_cells_and_kzg_proofs (
    Cell* recovered_cells,
    KZGProof* recovered_proofs,
    const(ulong)* cell_indices,
    const(Cell)* cells,
    ulong num_cells,
    const(KZGSettings)* s);

C_KZG_RET verify_cell_kzg_proof_batch (
    bool* ok,
    const(Bytes48)* commitments_bytes,
    const(ulong)* cell_indices,
    const(Cell)* cells,
    const(Bytes48)* proofs_bytes,
    ulong num_cells,
    const(KZGSettings)* s);
